src/components/styles/_typography.scss
// Create Font Sizes
$font-sizes: 11; //How many font sizes to produce
$base-font-position: 3; //Position that should be the base font size. This is useful for creating sizes below the base size.

:root {
  // Font Weights
  --fontWeightNormal: 400;
  --fontWeightBold: 700;
  --fontWeightBlack: 900;

  ////////////////////////
  // Settings
  ////////////////////////

  // Font Family
  --fontFamilyMain: 'sofia-pro', Helvetica, sans-serif;

  // Font Size
  --fontSizeBase: 1.125rem;
  --fontSizeRatio: 1.25;

  // Line Heights
  --bodyLineHeight: 1.75;
  --titleLineHeight: 1.25;
  --uiLineHeight: 1;

  // UI Line Height Normalize
  // This is a bottom padding that can be tweaked on a font by font basis to better optically center capitalized UI copy within a line height
  --uiFontUpperNormalize: 0.13em;

  ////////////////////////
  // Create Font Sizes
  ////////////////////////

  // Create Base Font Size
  --fontSize#{$base-font-position}: var(--fontSizeBase);

  // Generate font size variables ( 'fontSize1, fontSize2, etc.' )
  $font-size-start: $base-font-position + 1;
  @for $i from $font-size-start through $font-sizes {
    --fontSize#{$i}: calc(var(--fontSize#{$i - 1}) * var(--fontSizeRatio));
  }

  // Create font size below the base font size
  $base-font-position-loop: $base-font-position;
  @while $base-font-position-loop > 1 {
    --fontSize#{$base-font-position-loop - 1}: calc(
      var(--fontSize#{$base-font-position-loop}) / var(--fontSizeRatio)
    );
    $base-font-position-loop: $base-font-position-loop - 1;
  }

  // Create Body Fonts
  @for $i from 1 through $font-sizes {
    --bodyFont#{$i}: var(--fontWeightNormal)
      var(--fontSize#{$i}) /
      var(--bodyLineHeight)
      var(--fontFamilyMain);
  }

  // Create Title Fonts
  @for $i from 1 through $font-sizes {
    --titleFont#{$i}: var(--fontSize#{$i}) / var(--titleLineHeight) var(--fontFamilyMain);
  }

  // Create UI Fonts
  @for $i from 1 through $font-sizes {
    --uiFont#{$i}: var(--fontSize#{$i}) / var(--uiLineHeight) var(--fontFamilyMain);
  }
}

////////////////////////
// Mixins to Use Font Sizes
////////////////////////

// Create a title font of a specific size
@mixin bodyFont($size, $font-family: null) {
  font: var(--bodyFont#{$size}) $font-family;
  @if ($font-family) {
    font-family: $font-family;
  }
}

@mixin titleFont($size, $font-family: null) {
  font: var(--titleFont#{$size}) $font-family;
  @if ($font-family) {
    font-family: $font-family;
  }
}

// Create a ui font of a specific size
@mixin uiFont($size, $font-family: null) {
  font: var(--uiFont#{$size}) $font-family;
  padding-bottom: var(--uiFontUpperNormalize);
  @if ($font-family) {
    font-family: $font-family;
  }
}

// Set global body font
.site-wrapper__content {
  @include bodyFont($base-font-position);
  font-family: var(--fontFamilyMain);
}

////////////////////////
// Typography Basics
////////////////////////
$body-copy-max-width: 32rem;

h1,
.h1 {
  @include titleFont(6);
  font-weight: var(--fontWeightBold);
  margin-bottom: var(--spacer5);
  @include screen-sm {
    @include titleFont(7);
    font-weight: var(--fontWeightBold);
    margin-bottom: var(--spacer6);
  }
  font-weight: var(--fontWeightBold);
  margin-bottom: var(--spacer6);
  margin-top: 0;
}
h2,
.h2 {
  @include titleFont(5);
  font-weight: var(--fontWeightBold);
  margin-bottom: var(--spacer4);
  margin-top: var(--spacer8);
}
h3,
.h3 {
  @include titleFont(3);
  font-weight: var(--fontWeightBlack);
  text-transform: uppercase;
  margin-bottom: var(--spacer4);
  margin-top: var(--spacer8);
}
p {
  margin-bottom: var(--spacer5);
}

